--- a/package.json
+++ b/package.json
@@ -4,16 +4,18 @@
     "description": "",
     "main": "server/server.js",
     "scripts": {
-      "start": "node server/server.js --ignore my-app",
-      "develop": "concurrently \"cd server && npm run watch\" \"cd my-app && npm start\"",
-      "install": "cd server && npm i && cd ../my-app && npm i",
-      "seed": "cd server && npm run seed",
-      "build": "cd my-app && npm run build"
+        "start": "node server/server.js --ignore my-app",
+        "develop": "concurrently \"cd server && npm run watch\" \"cd my-app && npm start\"",
+        "install": "cd server && npm i && cd ../my-app && npm i",
+        "seed": "cd server && npm run seed",
+        "build": "cd my-app && npm run build"
     },
     "author": "",
     "license": "MIT",
     "devDependencies": {
-      "concurrently": "^5.3.0"
+        "concurrently": "^5.3.0"
+    },
+    "dependencies": {
+        "@apollo/client": "^3.7.14"
     }
-  }
-  
+}
