--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
     "description": "",
     "main": "server.js",
     "scripts": {
+      "devStart": "nodemon authServer.js",
       "start": "node server.js",
       "seed": "node seeds/seed.js",
       "watch": "nodemon server.js"
