--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dependencies": {
         "@apollo/client": "^3.7.14",
         "@apollo/server": "^4.7.1",
+        "bcrypt": "^5.1.0",
         "dotenv": "^16.0.3",
         "jsonwebtoken": "^9.0.0"
     }
