adding stripe - almost there but 400 bad rqst still

--- a/package.json
+++ b/package.json
@@ -19,8 +19,13 @@
     "dependencies": {
         "@apollo/client": "^3.7.14",
         "@apollo/server": "^4.7.1",
+        "@stripe/stripe-js": "^1.53.0",
+        "apollo-server-express": "^3.6.2",
         "bcrypt": "^5.1.0",
         "dotenv": "^16.0.3",
-        "jsonwebtoken": "^9.0.0"
+        "express": "^4.17.2",
+        "jsonwebtoken": "^9.0.0",
+        "mongoose": "^6.1.8",
+        "stripe": "^12.6.0"
     }
 }
