--- a/my-app/package.json
+++ b/my-app/package.json
@@ -2,6 +2,7 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://shielded-brook-82573.herokuapp.com/",
   "dependencies": {
     "@apollo/client": "^3.7.14",
     "@apollo/server": "^4.7.1",
