--- a/my-app/package.json
+++ b/my-app/package.json
@@ -2,7 +2,7 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://tasks-mastered-frontend.herokuapp.com",
+  "homepage": "http://localhost:3000",
   "dependencies": {
     "@apollo/client": "^3.7.14",
     "@apollo/server": "^4.7.1",
@@ -17,8 +17,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "pre-start": "react-scripts start",
-    "start": "node server.js",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
