--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
         "concurrently": "^5.3.0",
         "nodemon": "^2.0.22"
     },
-    "homepage": "https://shielded-brook-82573.herokuapp.com/",
+    "homepage": "",
     "dependencies": {
         "@apollo/client": "^3.7.14",
         "@apollo/server": "^4.7.1",
